rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_implementors_not_list_of_path.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator(a,b,c,d(e,f,g))]
struct SomeStruct;

fn main(){}
